# tethyr

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  SPEC.md  agent_context.py  ai_client.py  app.py  architecture.md  grounding.py  img_conversion.py  load_env.py  main copy.py  main.py  ollama_client.py  payload.json  pyproject.toml  requirements.txt  serve.py  test_context.py
.claude/: settings.local.json
output/session_4743232912_20251025_123640/: session_metadata.json
output/session_4743695056_20251025_123638/: session_metadata.json
snap/: server.py
snap/snap/: snap.esproj
snap/snap/Assets/: BoundBox.prefab  CoordinateFetcher.ts  Image.mat  ImageMaterial.mat  Microphone Audio.micaudio  Scene.scene
snap/snap/Assets/Audio Analyzer.lspkg/: Audio_Analyzer__PLACE_IN_SCENE.prefab  package.native
snap/snap/Assets/Audio Analyzer.lspkg/Shaders/: beats_material.ss_graph
templates/: index.html
tethyr/: __init__.py  email_supervisor.py  gemini_client.py  grounding.py  handlers.py  prompts.py  scratchpad.py  scratchpad_tools.py  server.py  slack_tool.py  storage.py  types.py  utils.py
