[project]
name = "tethyr-labs"
version = "0.1.0"
description = "Webcam web app with AI integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "flask>=2.3.3",
    "werkzeug>=2.3.7",
    "requests>=2.31.0",
    "ollama>=0.6.0",
    "websockets>=15.0.1",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 128
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
